@@ -3,6 +3,8 @@
 * Enhancements
   * Using Contour 1.0.0 with Twitter-Bootstrap
   * Sticky filters can now be reset
+  * Groups can now be created from the project page
+  * Default calendar options added when user registers
 
 == 0.21.0
 
